Fix google featured snippets contrast issue

--- a/styles/google/catppuccin.user.css
+++ b/styles/google/catppuccin.user.css
@@ -474,6 +474,14 @@
 
     /* End of AI search */
 
+    /* Featured snippets */
+    @media (prefers-reduced-motion: no-preference) {
+      .c2xzTb .ILfuVd b {
+        background: linear-gradient(90deg, fade(@accent-color, 30%) 50%, #0000 50%) no-repeat 75% 0;
+        background-size: 200% 100%;
+      }
+    }
+
     .pHiOh,
     a.pHiOh {
       color: @subtext1 !important;
